added profile picture and introduced myself

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <main class="main-content">
         <h1>Welcome!</h1>
+        <img class="profile-pic" src="me.png" alt="my picture">
+        <p class="my-description">Hey there! It's me Kushal Pathak.</p>
     </main>
   </body>
 </html>
