--- a/index.html
+++ b/index.html
@@ -4,23 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Kushal Pathak</title>
   </head>
   <body>
     <nav class="main-nav">
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#about">About Me</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact Me</a></li>
       </ul>
     </nav>
 
-    <main class="main-content">
-        <h1>Welcome!</h1>
-        <img class="profile-pic" src="me.png" alt="my picture">
-        <p class="my-description">Hey there! It's me Kushal Pathak.</p>
+    <main class="main-content" id="about">
+      <h1>Welcome!</h1>
+      <img class="profile-pic" src="me.png" alt="my picture" />
+      <p class="short-intro">Hey there! It's me Kushal Pathak.</p>
+      <div class="long-intro">
+        <p class="intro-item intro-item-1">
+          I am a 22 year-old bachelor's student (undergrad). I was born and
+          raised in Gaindakot Nepal, and currently reside in Gaindakot. In my
+          free time, I enjoy coding and gaming, such as Simulations for coding and Valorant for gaming. I'm also passionate about Free and
+          Open Source Softwares, and enjoy volunteering my time to make a
+          difference.
+        </p>
+        <p class="intro-item intro-item-2">
+          As for my educational background, I am an undergrad from Tribhuwan
+          University. I gained experience in web development through local area
+          projects. I'm always eager to learn and expand my skill set, which is
+          why I'm doing web development.
+        </p>
+        <p class="intro-item intro-item-3">
+          Overall, I am a empathetic, curious, and hardworking individual who is
+          excited to see what the future holds. I'm looking forward to meeting
+          new people, exploring new opportunities, and making a difference in
+          the world.
+        </p>
+      </div>
     </main>
+    <footer>
+        &copy; 2023 Kushal Pathak. All rights reserved.
+    </footer>
   </body>
 </html>
