--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="main-nav">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact Me</a></li>
