intro paragraphs' text is center aligned

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <p class="intro-item intro-item-1">
           I am a 22 year-old bachelor's student (undergrad). I was born and
           raised in Gaindakot Nepal, and currently reside in Gaindakot. In my
-          free time, I enjoy coding and gaming, such as Simulations for coding and Valorant for gaming. I'm also passionate about Free and
-          Open Source Softwares, and enjoy volunteering my time to make a
-          difference.
+          free time, I enjoy coding and gaming, such as Simulations for coding
+          and Valorant for gaming. I'm also passionate about Free and Open
+          Source Softwares, and enjoy volunteering my time to make a difference.
         </p>
         <p class="intro-item intro-item-2">
           As for my educational background, I am an undergrad from Tribhuwan
@@ -43,8 +43,6 @@
         </p>
       </div>
     </main>
-    <footer>
-        &copy; 2023 Kushal Pathak. All rights reserved.
-    </footer>
+    <footer>&copy; 2023 Kushal Pathak. All rights reserved.</footer>
   </body>
 </html>
