--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
         </p>
       </div>
     </main>
+    
+    <section class="skill-section" id="skills">
+      <h2>My Skills</h2>
+      <ul>
+        <li class="skill-1">HTML</li>
+        <li class="skill-2">CSS</li>
+        <li class="skill-3">JAVASCRIPT</li>
+        <li class="skill-4">REACT.JS</li>
+        <li class="skill-5">NODE.JS</li>
+        <li class="skill-6">FIGMA</li>
+      </ul>
+    </section>
     <footer>&copy; 2023 Kushal Pathak. All rights reserved.</footer>
   </body>
 </html>
