minor changes, made more mobile responsive

--- a/index.html
+++ b/index.html
@@ -80,10 +80,32 @@
           <h1>Contact Me</h1>
           <div class="contacts">
             <ul>
-              <li><a target="blank" href="https://www.facebook.com/kushalpathak.100">facebook</a></li>
-              <li><a target="blank" href="https://www.linkedin.com/in/kushal-pathak-9501121a4">linkedin</a></li>
-              <li><a target="blank" href="https://github.com/Kushal-Pathak">github</a></li>
-              <li><a target="blank" href="https://www.youtube.com/channel/UCS_FTmgQo1uACueCWMQMKlw">youtube</a></li>
+              <li>
+                <a
+                  target="blank"
+                  href="https://www.facebook.com/kushalpathak.100"
+                  >facebook</a
+                >
+              </li>
+              <li>
+                <a
+                  target="blank"
+                  href="https://www.linkedin.com/in/kushal-pathak-9501121a4"
+                  >linkedin</a
+                >
+              </li>
+              <li>
+                <a target="blank" href="https://github.com/Kushal-Pathak"
+                  >github</a
+                >
+              </li>
+              <li>
+                <a
+                  target="blank"
+                  href="https://www.youtube.com/channel/UCS_FTmgQo1uACueCWMQMKlw"
+                  >youtube</a
+                >
+              </li>
             </ul>
           </div>
         </section>
