--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
           <img id="about" src="me.png" alt="my pic" class="my-pic" />
           <p class="short-intro">Hey there! It's me Kushal</p>
           <p class="intro-text">
-            I am a 22 year-old bachelor's student (undergrad). I was born and
-            raised in Gaindakot Nepal, and currently reside in Gaindakot. In my
-            free time, I enjoy coding and gaming, such as Simulations for coding
-            and Valorant for gaming. I'm also passionate about Free and Open
-            Source Softwares, and enjoy volunteering my time to make a
-            difference.
+            I am a 22 year-old bachelor's student. I was born and raised in
+            Gaindakot Nepal, and currently reside in Gaindakot. In my free time,
+            I enjoy coding and gaming, such as Simulations for coding and
+            Valorant for gaming. I'm also passionate about Free and Open Source
+            Softwares, and enjoy volunteering my time to make a difference.
             <br /><br />
             As for my educational background, I am an undergrad from Tribhuwan
-            University. I gained experience in web development through local
-            area projects. I'm always eager to learn and expand my skill set,
-            which is why I'm doing web development.
+            University. I gained experience in web development through practice.
+            I'm always eager to learn and expand my skill set, which is why I'm
+            doing coding.
             <br /><br />
             Overall, I am a empathetic, curious, and hardworking individual who
             is excited to see what the future holds. I'm looking forward to
