fix: css + UI/UX with some comments

--- a/index.html
+++ b/index.html
@@ -1,118 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Kushal Pathak</title>
-  </head>
-  <body id="home">
-    <div class="main-container">
-      <nav class="main-nav">
-        <ul>
-          <li><a class="nav-a" href="#home">Home</a></li>
-          <li><a class="nav-a" href="#about">About</a></li>
-          <li><a class="nav-a" href="#skill">Skills</a></li>
-          <li><a class="nav-a" href="#contact">Contact</a></li>
-          <li><a class="nav-a" id="mode">DARK</a></li>
-        </ul>
-      </nav>
 
-      <main class="main-content">
-        <section class="intro">
-          <h1>Welcome!</h1>
-          <img id="about" src="me.png" alt="my pic" class="my-pic" />
-          <p class="short-intro">Hey there! It's me Kushal</p>
-          <p class="intro-text">
-            I am a 22 year-old bachelor's student. I was born and raised in
-            Gaindakot Nepal, and currently reside in Gaindakot. In my free time,
-            I enjoy coding and gaming, such as Simulations for coding and
-            Valorant for gaming. I'm also passionate about Free and Open Source
-            Softwares, and enjoy volunteering my time to make a difference.
-            <br /><br />
-            As for my educational background, I am an undergrad from Tribhuwan
-            University. I gained experience in web development through practice.
-            I'm always eager to learn and expand my skill set, which is why I'm
-            doing coding.
-            <br /><br />
-            Overall, I am a empathetic, curious, and hardworking individual who
-            is excited to see what the future holds. I'm looking forward to
-            meeting new people, exploring new opportunities, and making a
-            difference in the world.
-          </p>
-        </section>
-        <section class="skill-section" id="skill">
-          <h1>My Skills</h1>
-          <div class="skill-list">
-            <div>
-              <h2>Beginner</h2>
-              <ul>
-                <li>NEXT.js</li>
-                <li>BLENDER</li>
-                <li>UNITY</li>
-                <li>PHOTOSHOP</li>
-              </ul>
-            </div>
-            <div>
-              <h2>Intermediate</h2>
-              <ul>
-                <li>FIGMA</li>
-                <li>REACT.js</li>
-                <li>CSS</li>
-                <li>MY SQL</li>
-              </ul>
-            </div>
-            <div>
-              <h2>Advanced</h2>
-              <ul>
-                <li>HTML</li>
-                <li>JAVASCRIPT</li>
-                <li>NODE.js x EXPRESS.js</li>
-                <li>MONGODB</li>
-                <li>C/C++</li>
-              </ul>
-            </div>
-          </div>
-        </section>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <title>Kushal Pathak</title>
+</head>
 
-        <section id="contact" class="contact-section">
-          <h1>Contact Me</h1>
-          <div class="contacts">
+<body id="home">
+  <div class="main-container">
+    <nav class="main-nav">
+      <ul>
+        <li><a class="nav-a" href="#home">Home</a></li>
+        <li><a class="nav-a" href="#about">About</a></li>
+        <li><a class="nav-a" href="#skill">Skills</a></li>
+        <li><a class="nav-a" href="#contact">Contact</a></li>
+        <li><a class="nav-a" id="mode">DARK</a></li>
+      </ul>
+    </nav>
+
+    <main class="main-content">
+      <section class="intro">
+        <h1 style="font-size: 2rem;font-weight: 700;">Welcome!</h1>
+        <img id="about" src="me.png" alt="my pic" class="my-pic" />
+        <p class="short-intro">Hey there! It's me Kushal</p>
+        <p class=" intro-text" style="font-family: sans-serif">
+          I am a 22 year-old bachelor's student. I was born and raised in
+          Gaindakot Nepal, and currently reside in Gaindakot. In my free time,
+          I enjoy coding and gaming, such as Simulations for coding and
+          Valorant for gaming. I'm also passionate about Free and Open Source
+          Softwares, and enjoy volunteering my time to make a difference.
+          <br /><br />
+          As for my educational background, I am an undergrad from Tribhuwan
+          University. I gained experience in web development through practice.
+          I'm always eager to learn and expand my skill set, which is why I'm
+          doing coding.
+          <br /><br />
+          Overall, I am a empathetic, curious, and hardworking individual who
+          is excited to see what the future holds. I'm looking forward to
+          meeting new people, exploring new opportunities, and making a
+          difference in the world.
+        </p>
+      </section>
+      <section class="skill-section" id="skill">
+        <h1 style="font-size: 30px;">My Skills</h1>
+        <div class="skill-list">
+          <div>
+            <h2>Beginner</h2>
             <ul>
-              <li>
-                <a
-                  target="blank"
-                  href="https://www.facebook.com/kushalpathak.100"
-                  >facebook</a
-                >
-              </li>
-              <li>
-                <a
-                  target="blank"
-                  href="https://www.linkedin.com/in/kushal-pathak-9501121a4"
-                  >linkedin</a
-                >
-              </li>
-              <li>
-                <a target="blank" href="https://github.com/Kushal-Pathak"
-                  >github</a
-                >
-              </li>
-              <li>
-                <a
-                  target="blank"
-                  href="https://www.youtube.com/channel/UCS_FTmgQo1uACueCWMQMKlw"
-                  >youtube</a
-                >
-              </li>
+              <li>NEXT.js</li>
+              <li>BLENDER</li>
+              <li>UNITY</li>
+              <li>PHOTOSHOP</li>
             </ul>
           </div>
-        </section>
-      </main>
+          <div>
+            <h2>Intermediate</h2>
+            <ul>
+              <li>FIGMA</li>
+              <li>REACT.js</li>
+              <li>CSS</li>
+              <li>MY SQL</li>
+            </ul>
+          </div>
+          <div>
+            <h2>Advanced</h2>
+            <ul>
+              <li>HTML</li>
+              <li>JAVASCRIPT</li>
+              <li>NODE.js x EXPRESS.js</li>
+              <li>MONGODB</li>
+              <li>C/C++</li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-      <footer><p>&copy; 2023 Kushal Pathak. All rights reserved.</p></footer>
-    </div>
-    <script src="index.js"></script>
-  </body>
+      <section id="contact" class="contact-section">
+        <h1>Contact Me</h1>
+        <div class="contacts">
+          <ul>
+            <li>
+              <a target="blank" href="https://www.facebook.com/kushalpathak.100">facebook</a>
+            </li>
+            <li>
+              <a target="blank" href="https://www.linkedin.com/in/kushal-pathak-9501121a4">linkedin</a>
+            </li>
+            <li>
+              <a target="blank" href="https://github.com/Kushal-Pathak">github</a>
+            </li>
+            <li>
+              <a target="blank" href="https://www.youtube.com/channel/UCS_FTmgQo1uACueCWMQMKlw">youtube</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2023 Kushal Pathak. All rights reserved.</p>
+    </footer>
+  </div>
+  <script src="index.js"></script>
+</body>
+
 </html>
