--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a
             aria-label="My Résumé"
             target="_blank"
-            href="/resume.html"
+            href="resume.html"
           >
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
